# usbip-usbd

./: .gitignore  Cargo.toml
examples/: serial.rs  terminal.rs  terminal_thread.rs
src/: bus.rs  device.rs  endpoint.rs  lib.rs  protocol.rs  server.rs  usbcore.rs
