[package]
name = "usbip-usbd"
description = "USB/IP server for virtual USB devices using usb-device"
version = "0.1.0"
edition = "2018"
authors = ["Matti Virkkunen <mvirkkunen@gmail.com>"]
repository = "https://github.com/mvirkkunen/usbip-usbd"

[dependencies]
bytes = "0.4.12"
tokio = "0.1.22"
usb-device = "0.2.1"

[dev-dependencies]
usbd-serial = "0.1.0"
