[package]
name = "usbip-usbd"
description = "USB/IP server for virtual USB devices using usb-device"
version = "0.1.0"
edition = "2018"
authors = ["Matti Virkkunen <mvirkkunen@gmail.com>"]
repository = "https://github.com/mvirkkunen/usbip-usbd"

[dependencies]
bytes = "0.5.4"
futures = "0.3.4"
#futures_codec = "0.4.0"
tokio = { version = "0.2.18", features = ["io-std", "io-util", "macros", "net", "rt-threaded", "sync", "time"] }
tokio-util = { version = "0.3.1", features = ["codec"] }
usb-device = "0.2.5"

[dev-dependencies]
usbd-serial = "0.1.0"
